implementação da comparação da senha
