# src/routes/index.ts
@@ -9,8 +9,8 @@ const routes = Router();
 
 // Routes Users
 routes.post("/v1/user", UserController.create);
-routes.get("/v1/user", UserController.findOne);
-routes.delete("/v1/user", UserController.delete);
+routes.post("/v1/auth", UserController.auth);
+routes.delete("/v1/delete", UserController.delete);
 routes.get("/v1/users", UserController.find);
 
 // Routes news
